--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "hapi": "^13.5.0",
     "inert": "^4.0.1",
+    "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "nconf": "^0.8.4",
     "pokemon-go-node-api": "^1.2.6",
