server side working with pogobuf lib

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "joi": "^9.0.1",
     "json-loader": "^0.5.4",
     "nconf": "^0.8.4",
-    "pokemon-go-node-api": "^1.2.6",
+    "pogobuf": "^1.1.0",
     "react": "^15.2.1",
     "react-addons-pure-render-mixin": "^15.2.1",
     "react-dom": "^15.2.1",
