added proto for lookup

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "joi": "^9.0.1",
     "json-loader": "^0.5.4",
     "nconf": "^0.8.4",
+    "node-pogo-protos": "^1.0.3",
     "pogobuf": "^1.1.0",
     "react": "^15.2.1",
     "react-addons-pure-render-mixin": "^15.2.1",
