added object spread support

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "url": "https://github.com/jwtlake/pokemon-go-helper/issues"
   },
   "dependencies": {
+    "babel-plugin-transform-es2015-destructuring": "^6.9.0",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "hapi": "^13.5.0",
     "inert": "^4.0.1",
     "joi": "^9.0.1",
