--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router": "^2.6.0",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
+    "request": "^2.74.0",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
